Image path address change

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	</head>
 	
 	<body>
+			<br>
+			<ul>
+				<li><a class="active" href="index.html">Home</a></li>
+				<li><a href="coverLetter.html">Cover Letter</a></li>
+			</ul>
+			<br>
+			<br>
+			<br>
 		
 		<h1 class="name">Elena Nastina</h1>
 			<div class="email">
@@ -23,29 +31,24 @@
 		<br>
 		<br>
 		<h2 class="heading">Education</h2>
-		<h3>
-			<p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p>
-			<p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p>
-			<p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p>
-			<p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p>
-			<p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p>
-		</h3>
+			<h3><p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p></h3>
+			<h3><p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p></h3>
+			<h3><p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p></h3>
+			<h3><p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p></h3>
+			<h3><p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p></h3>
 		<br>
 		
-		<h2 class="heading">Skills
-		<h3>
+		<h2 class="heading">Skills</h2>
 			<ul>
-				<li>Strong stakeholder management skills applied to a large audience</li>
-				<li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li>
-				<li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li>
-				<li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li>
-				<li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li>
-				<li>Extremely motivated self-starter</li>
-				<li>Team Player</li>
+				<h3><li>Strong stakeholder management skills applied to a large audience</li></h3>
+				<h3><li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li></h3>
+				<h3><li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li></h3>
+				<h3><li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li></h3>
+				<h3><li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li></h3>
+				<h3><li>Extremely motivated self-starter</li></h3>
+				<h3><li>Team Player</li></h3>
 			</ul>
 			</pre>
-		</h3>
-		</h2>
 		<br>
 		
 		<h2 class="heading">Work Experience
@@ -90,10 +93,7 @@
 		<br>
 		<h3 <a id="exp_and_ref" here</a>Previous work experience & references available on request</h3>
 		
-			<ul>
-				<li><a class="active" href="index.html">Home</a></li>
-				<li><a href="coverLetter.html">Cover Letter</a></li>
-			</ul>
+			
 	</body>
 
 </html>
