--- a/index.html
+++ b/index.html
@@ -4,10 +4,65 @@
 	<head>
 		<title>This is my CV!</title>
 		<link rel="stylesheet" href="myCV.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
 	
 	<body>
-			<br>
+	
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="Images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cover Letter</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="#">CV</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="#">Contacts</a>
+        </li>
+      
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+		
 			<ul>
 				<li><a class="active" href="index.html">Home</a></li>
 				<li><a href="coverLetter.html">Cover Letter</a></li>
@@ -31,24 +86,29 @@
 		<br>
 		<br>
 		<h2 class="heading">Education</h2>
-			<h3><p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p></h3>
-			<h3><p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p></h3>
-			<h3><p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p></h3>
-			<h3><p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p></h3>
-			<h3><p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p></h3>
+		<h3>
+			<p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p>
+			<p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p>
+			<p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p>
+			<p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p>
+			<p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p>
+		</h3>
 		<br>
 		
-		<h2 class="heading">Skills</h2>
+		<h2 class="heading">Skills
+		<h3>
 			<ul>
-				<h3><li>Strong stakeholder management skills applied to a large audience</li></h3>
-				<h3><li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li></h3>
-				<h3><li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li></h3>
-				<h3><li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li></h3>
-				<h3><li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li></h3>
-				<h3><li>Extremely motivated self-starter</li></h3>
-				<h3><li>Team Player</li></h3>
+				<li>Strong stakeholder management skills applied to a large audience</li>
+				<li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li>
+				<li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li>
+				<li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li>
+				<li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li>
+				<li>Extremely motivated self-starter</li>
+				<li>Team Player</li>
 			</ul>
 			</pre>
+		</h3>
+		</h2>
 		<br>
 		
 		<h2 class="heading">Work Experience
@@ -93,7 +153,9 @@
 		<br>
 		<h3 <a id="exp_and_ref" here</a>Previous work experience & references available on request</h3>
 		
-			
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+	
 	</body>
 
 </html>
