--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
+    <a class="navbar-brand" href="#"><img src="ElenaNastina.github.io/images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,10 +47,10 @@
       <img src="ElenaNastina.github.io/images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
     </div>
     <div class="carousel-item">
-      <img src="Images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
+      <img src="ElenaNastina.github.io/images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
     </div>
     <div class="carousel-item">
-      <img src="Images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
+      <img src="ElenaNastina.github.io/images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
