--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src=".../image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
+      <img src=".../images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
     </div>
     <div class="carousel-item">
-      <img src="ElenaNastina.github.io/images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
+      <img src=".../images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
     </div>
     <div class="carousel-item">
-      <img src="ElenaNastina.github.io/images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
+      <img src=".../images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
