--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="This PC/Documents/github/ElenaNastina.github.io/images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
+      <img src=".../images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
     </div>
     <div class="carousel-item">
       <img src=".../images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
