--- a/coverLetter.html
+++ b/coverLetter.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
 		<title>This is my CV!</title>
 		<link rel="stylesheet" href="myCV.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
-	
 	<body>
-		<h1 class="cover">Cover Letter</h1>
-		<img src="images/profile_pic.jpg" alt="Elena Nastina's photo" style="width:303px;height:421px;"/>
-		<br>
-		<br>
-			<p>I have over 12 years’ experience within the Accenture portfolio with various roles in Customer service and as an Executive Assistant. Supporting senior MD's within H&PS, Finance, Strategy, Technology, The Dock Innovation Hub and CIO affording me a broad knowledge base of the Accenture way of working. I have an extensive experience in stakeholder management, working within team environments while building strong relationships. I am a highly structured, methodical, process driven person with an appetite for self-development. I am innovative, a strong project manager and a team player. I pride myself in being a self-starter with excellent planning and organisation skills and wish to continue to work in a fast paced, and challenging environment where I am constantly learning (More on preveious work experience and reference <a href="#exp_and_ref">here</a>).</p>
-		<br>
-		<br>
-		<br>
-		
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a class="active" href="coverLetter.html">Cover Letter</a></li>
-		</ul>
+		<div class="content">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#"><img src="./images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item">
+								<a class="nav-link h5" href="index.html"><b>My CV</b></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active h5" aria-current="page" href="#"><b>Cover Letter</b></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<h1 class="cover">Cover Letter</h1>
+			<div class="flex">
+				<img src="images/profile_pic.jpg" alt="Elena Nastina's photo" style="width:303px;height:421px;"/>
+				<p class="cover-text">I have over 12 years’ experience within the Accenture portfolio with various roles in Customer service and as an Executive Assistant. Supporting senior MD's within H&PS, Finance, Strategy, Technology, The Dock Innovation Hub and CIO affording me a broad knowledge base of the Accenture way of working. I have an extensive experience in stakeholder management, working within team environments while building strong relationships. I am a highly structured, methodical, process driven person with an appetite for self-development. I am innovative, a strong project manager and a team player. I pride myself in being a self-starter with excellent planning and organisation skills and wish to continue to work in a fast paced, and challenging environment where I am constantly learning (More on preveious work experience and reference <a href="#exp_and_ref">here</a>).</p>
+			</div>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+		</div>
 	</body>
-	
 </html>
