--- a/index.html
+++ b/index.html
@@ -1,161 +1,144 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
 		<title>This is my CV!</title>
 		<link rel="stylesheet" href="myCV.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
-	
 	<body>
-	
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src=".../images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cover Letter</a>
-        </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#">CV</a>
-        </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
-        </li>
-      
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src=".../images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
-    </div>
-    <div class="carousel-item">
-      <img src=".../images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
-    </div>
-    <div class="carousel-item">
-      <img src=".../images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-		
-			<ul>
-				<li><a class="active" href="index.html">Home</a></li>
-				<li><a href="coverLetter.html">Cover Letter</a></li>
-			</ul>
+		<div class="content">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#"><img src="./images/code-image-banner.jpg" alt="Coding banner logo" height="90" width="200"></a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item">
+								<a class="nav-link active h5" aria-current="page" href="#"><b>My CV</b></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link h5" href="coverLetter.html"><b>Cover Letter</b></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="./images/image_1.jpg" class="d-block w-100" alt="Water drop" height="500" width="30">
+					</div>
+					<div class="carousel-item">
+						<img src="./images/Girl-Laptop.jpg" class="d-block w-100" alt="Girl with the laptop" height="500" width="30">
+					</div>
+					<div class="carousel-item">
+						<img src="./images/Cyber-security.jpg" class="d-block w-100" alt="Cyber security logo" height="500" width="30">
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+				</button>
+			</div>
 			<br>
 			<br>
 			<br>
-		
-		<h1 class="name">Elena Nastina</h1>
-			<div class="email">
-                <p><h3>Email: helelagordita@hotmail.com</h3></p>
-            </div>
-            <div class="linkedin">
-                <h3><a href="www.linkedin.com/in/elena-nastina-8307b173" target="blank">LinkedIn Profile</a></h3>
-            </div>
-            <div class="phone">
-                <p><h3>Phone: 0861620512</h3></p>
-            </div>
-			
-		<br>
-		<br>
-		<br>
-		<h2 class="heading">Education</h2>
-		<h3>
-			<p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p>
-			<p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p>
-			<p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p>
-			<p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p>
-			<p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p>
-		</h3>
-		<br>
-		
-		<h2 class="heading">Skills
-		<h3>
-			<ul>
-				<li>Strong stakeholder management skills applied to a large audience</li>
-				<li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li>
-				<li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li>
-				<li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li>
-				<li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li>
-				<li>Extremely motivated self-starter</li>
-				<li>Team Player</li>
-			</ul>
-			</pre>
-		</h3>
-		</h2>
-		<br>
-		
-		<h2 class="heading">Work Experience
-		<h3>
-			<p><span style="font-weight:bold">Accenture:</span> Dec ‘14 – present</p>
-			<p><u style="text-decoration:underline">Title:</u>  Executive Assistant Analyst:</p>
-				<ul>
-					<li>Provide administrative and secretarial support to 4 MDs, including Senior and Global members of the Leadership team.</li>
-					<li>Build and manage strong relationships with stakeholders, clients and peers within Ireland and globally including being the key point of contact for executives within the business.</li> 
-					<li>Managing requests from the wider Accenture business, analysing information provided and assessing what is required to process it efficiently and get the best outcome for all involved.</li>
-					<li>Provide clear and factual written and verbal communication to many stakeholders on behalf of my Managing Directors.</li>
-					<li>Effectively cross collaborate with several different teams including Marketing, Legal, HR & The Dock Leadership team.</li>
-					<li>Manage the Dock Leadership meetings, responsible for taking minutes and tracking actions while also allocating tasks to different members and ensure backlog deliverables were successfully met.</li>
-					<li>Work proactively and accurately in requesting information that I need in order to make informed decisions and identify key deadlines or potential conflicts.</li>
-					<li>Responsible for assessing ways of working to create process improvement opportunities for myself, stakeholders & wider team.</li>
-					<li>Managing systems such as (internal): CWT, EMS, Teams, myTE, SharePoint, One Drive, Microsoft Office, Buy Now (Ariba), Directory Group management (Distribution List tool).</li>
-				</ul>
-		<br>
-		
-			<p><span style="font-weight:bold">Accenture:</span>  Feb ‘13 – Feb’14</p>
-			<p><u style="text-decoration:underline">Title:</u> Enhanced Space Team Management:</p>
-				<ul>
-					<li>The Enhanced Space Management Team (ESM) proactively manages space efficiency across UKI, providing space for High profile Client and MD events.</li>
-					<li>This role largely consists of regular outbound calls/IMs/emails to customers with existing bookings.</li>
-					<li>The aim of the Booking Coordinator is to effectively manage the supply and demand for space and to ensure we meet our customers' requirements.</li>
-					<li>Running reports and providing data to the Management.</li>
-					<li>Ensuring the SharePoint is kept up to date, creating and updating all training/process documents.</li>
-				</ul>
-		<br>
-			<p><span style="font-weight:bold">Accenture:</span>  Jul ’10 – Dec’14</p>
-			<p><u style="text-decoration:underline">Title:</u> Workplace Service Agent – Tier 2:</p>
-				<ul>
-					<li>General Space Management Team (GSM) manages the day to day requests for space within UKI. The team works closely with Facilities, Catering, and onsite Customers Services Team.</li>
-					<li>Worked efficiently with a team of 6 agents.</li>
-					<li>Team received on average 300 calls & 500 e-mails per day.</li>
-					<li>Responsible for training and mentoring new Workplace Service Agents.</li>
-					<li>Providing backup support for Telepresence and Video Conference Support.</li>
-				</ul>
-		</h3>
-		</h2>
-		<br>
-		<br>
-		<h3 <a id="exp_and_ref" here</a>Previous work experience & references available on request</h3>
-		
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-	
+			<h1 class="name">Elena Nastina</h1>
+			<br>
+			<div class="contacts">
+				<div class="email">
+					<h3>Email: helelagordita@hotmail.com</h3>
+				</div>
+				<div class="phone">
+					<h3>Phone: 0861620512</h3>
+				</div>
+				<div class="linked">
+					<h3><a href="www.linkedin.com/in/elena-nastina-8307b173">LinkedIn Profile</a></h3>
+				</div>
+			</div>
+			<br>
+			<br>
+			<br>
+			<h2 class="heading">Education</h2>
+			<h4>
+				<p>Sept ’20 – present: Bachelor of Science (Hons) degree in Computing (National College of Ireland (NCIRL))</p>
+				<p>Sept ’19 – Dec ’19: Diploma in Cyber and Digital Security (Institute of Business & Technology Dublin (IBAT))</p>
+				<p>Apr ’14 – Aug ‘14: Java Programming Diploma (International Academy of Computer Training)</p>
+				<p>Jan ‘05 – Jan ‘07: BTEC Higher National Diploma in Business Management (College of Business and Service Management)</p>
+				<p>Sep ‘04 – June ‘06: Diploma in Computer Technologies – IT (for IT users) (McAuley Centre)</p>
+			</h4>
+			<br>
+			<h2 class="heading">
+				Skills
+				<h4>
+					<ul>
+						<li>Strong stakeholder management skills applied to a large audience</li>
+						<li>Strong written and verbal communication skills tailored to a varied audience, from MD to Analyst level</li>
+						<li>Ability to analyse, consolidate and document information to ensure that it is communicated clearly and efficiently to varying audiences</li>
+						<li>A level-headed approach to solving problems. Resilience to deal with challenges and an ability to operate comfortably in difficult and ambiguous situations</li>
+						<li>Strong project management skills with an ability to multitask and prioritise workload to ensure successful outcomes</li>
+						<li>Extremely motivated self-starter</li>
+						<li>Team Player</li>
+					</ul>
+					</pre>
+				</h4>
+			</h2>
+			<br>
+			<h2 class="heading">
+				Work Experience
+				<h4>
+					<p><span style="font-weight:bold">Accenture:</span> Dec ‘14 – present</p>
+					<p><u style="text-decoration:underline">Title:</u>  Executive Assistant Analyst:</p>
+					<ul>
+						<li>Provide administrative and secretarial support to 4 MDs, including Senior and Global members of the Leadership team.</li>
+						<li>Build and manage strong relationships with stakeholders, clients and peers within Ireland and globally including being the key point of contact for executives within the business.</li>
+						<li>Managing requests from the wider Accenture business, analysing information provided and assessing what is required to process it efficiently and get the best outcome for all involved.</li>
+						<li>Provide clear and factual written and verbal communication to many stakeholders on behalf of my Managing Directors.</li>
+						<li>Effectively cross collaborate with several different teams including Marketing, Legal, HR & The Dock Leadership team.</li>
+						<li>Manage the Dock Leadership meetings, responsible for taking minutes and tracking actions while also allocating tasks to different members and ensure backlog deliverables were successfully met.</li>
+						<li>Work proactively and accurately in requesting information that I need in order to make informed decisions and identify key deadlines or potential conflicts.</li>
+						<li>Responsible for assessing ways of working to create process improvement opportunities for myself, stakeholders & wider team.</li>
+						<li>Managing systems such as (internal): CWT, EMS, Teams, myTE, SharePoint, One Drive, Microsoft Office, Buy Now (Ariba), Directory Group management (Distribution List tool).</li>
+					</ul>
+					<br>
+					<p><span style="font-weight:bold">Accenture:</span>  Feb ‘13 – Feb’14</p>
+					<p><u style="text-decoration:underline">Title:</u> Enhanced Space Team Management:</p>
+					<ul>
+						<li>The Enhanced Space Management Team (ESM) proactively manages space efficiency across UKI, providing space for High profile Client and MD events.</li>
+						<li>This role largely consists of regular outbound calls/IMs/emails to customers with existing bookings.</li>
+						<li>The aim of the Booking Coordinator is to effectively manage the supply and demand for space and to ensure we meet our customers' requirements.</li>
+						<li>Running reports and providing data to the Management.</li>
+						<li>Ensuring the SharePoint is kept up to date, creating and updating all training/process documents.</li>
+					</ul>
+					<br>
+					<p><span style="font-weight:bold">Accenture:</span>  Jul ’10 – Dec’14</p>
+					<p><u style="text-decoration:underline">Title:</u> Workplace Service Agent – Tier 2:</p>
+					<ul>
+						<li>General Space Management Team (GSM) manages the day to day requests for space within UKI. The team works closely with Facilities, Catering, and onsite Customers Services Team.</li>
+						<li>Worked efficiently with a team of 6 agents.</li>
+						<li>Team received on average 300 calls & 500 e-mails per day.</li>
+						<li>Responsible for training and mentoring new Workplace Service Agents.</li>
+						<li>Providing backup support for Telepresence and Video Conference Support.</li>
+					</ul>
+				</h4>
+			</h2>
+			<br>
+			<br>
+			<h3 <a id="exp_and_ref" here</a>Previous work experience & references available on request</h3>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+		</div>
 	</body>
-
 </html>
